# Traject

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/axon_backend/: main.py
backend/axon_backend/api/v1/: attribution.py  benchmarks.py  budgets.py  cache.py  router.py  spans.py
backend/axon_backend/core/: __init__.py  config.py  database.py
backend/axon_backend/models/: __init__.py  attribution.py  benchmark.py  budget.py  cache_entry.py  span.py
backend/axon_backend/services/: __init__.py  anomaly_detector.py  cost_attribution.py  cost_predictor.py  ml_training.py  semantic_cache.py
backend/axon_backend/workers/: __init__.py  scheduler.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schema.py  0002_phase3_schema.py  0003_phase5_schema.py  0004_tenant_isolation.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_attribution_api.py  test_budgets_api.py  test_spans_api.py
backend/tests/unit/: __init__.py  test_anomaly_detector.py  test_budget_enforcer.py  test_cost_attribution.py  test_cost_predictor.py  test_health_endpoints.py  test_ml_training.py  test_semantic_cache.py  test_span_ingestion.py  test_ssrf.py  test_tenant_isolation.py
backend/traject_backend/: __init__.py  main.py
backend/traject_backend/api/: __init__.py
backend/traject_backend/api/v1/: __init__.py  attribution.py  benchmarks.py  budgets.py  cache.py  predictions.py  router.py  spans.py
backend/traject_backend/axon_backend/api/: __init__.py
backend/traject_backend/axon_backend/core/: config.py  redis_client.py
backend/traject_backend/axon_backend/models/: __init__.py
backend/traject_backend/core/: __init__.py  auth.py  config.py  database.py  redis_client.py  ssrf.py
backend/traject_backend/models/: __init__.py  attribution.py  base.py  benchmark.py  budget.py  cache_entry.py  span.py  tenant.py
backend/traject_backend/services/: __init__.py  anomaly_detector.py  budget_enforcer.py  cost_attribution.py  cost_predictor.py  ml_training.py  semantic_cache.py  span_ingestion.py
backend/traject_backend/workers/: __init__.py  scheduler.py
sdk/python/: README.md  benchmark_results.json  pyproject.toml  quality_results_moderate.json  quality_results_v2.json  swebench_results.json  swebench_results_moderate.json  swebench_results_v2.json
sdk/python/.hypothesis/constants/: 0010067b00fa7574  0cf4f6610ca0d2d0  0d538a053b10bda2  0f1c9450c72a4fc7  10fb8eaf228542be  1334c644f75ce0fd  1509388f89424e9b  151e66d6b0d24977  189d3d12e47a2447  19537b7e4256f474  2af72557b221663b  340c779630f84a2b  37680fbe3417c52f  3a177f9480227df5  3bf3fa75d0cf56df  40725a670ca7da2a  43fd763010de98c8  4b65112b68a0ca41  4e08c2042c9a3355  50ca581629077514  5551a16bf3f90a32  5e0154df72ba6d2e  5e0a6da5c81c27a6  6c11fd825259ea0c  6e19cee278081749  6ebe13aacfd63083  77d15e57205d89c8  7d56c0e5cc370085  7dd63eb6eb25e4fc  8068edbb6f05bf1a  80b598856d6b2834  8af93dd239852b41  911ea866fafb00b8  91b053646c461883  9236223652d85ffe  9b44ef2b7d7771b7  ab023902105814c5  ab8e2677a2db6619  af1914a54797902f  b05a3e22c6e7b630  (+25 more)
sdk/python/axon/: __init__.py  backend_client.py  exceptions.py  models.py
sdk/python/axon/advisor/: __init__.py
sdk/python/axon/batch/: __init__.py  job_tracker.py
sdk/python/axon/cache/: semantic_cache.py
sdk/python/axon/classifier/: artifact_type.py
sdk/python/axon/cli/: main.py
sdk/python/axon/compression/: __init__.py  engine.py  relevance_scorer.py  segment_parser.py
sdk/python/axon/core/: __init__.py  cost_calculator.py  instrumentor.py  pricing.py  provider_adapter.py
sdk/python/axon/plugins/: __init__.py  base.py  registry.py
sdk/python/axon/providers/: __init__.py
sdk/python/axon/router/: __init__.py  ab_test.py  conformal.py  ml_router.py  rule_router.py  task_classifier.py
sdk/python/axon/telemetry/: __init__.py  otel_exporter.py
sdk/python/axon/tracer/: __init__.py  cascade_tracer.py
sdk/python/tests/: conftest.py
sdk/python/tests/benchmarks/: bench_compression_latency.py  bench_sdk_overhead.py
sdk/python/tests/integration/: test_langchain_instrumentation.py  test_openai_instrumentation.py
sdk/python/tests/unit/: test_artifact_classifier.py  test_backend_client.py  test_batch_router.py  test_bedrock_adapter.py  test_cascade_tracer.py  test_ccr.py  test_cli.py  test_compression_cache.py  test_compression_engine.py  test_conformal.py  test_cost_calculator.py  test_dedup_and_inflation.py  test_exceptions.py  test_instrumentor.py  test_job_tracker.py  test_json_columnarizer.py  test_langchain_autogen_adapters.py  test_mcp_server.py  test_ml_router.py  test_models.py  test_otel_exporter.py  test_plugin_loader.py  test_plugin_registry.py  test_pricing.py  test_pricing_freshness.py  test_prompt_cache_advisor.py  test_prose_filter.py  test_provider_adapter.py  test_proxy_security.py  test_proxy_server.py  test_relevance_scorer.py  test_routing_table.py  test_rule_router.py  test_segment_parser.py  test_semantic_cache.py  test_semantic_reference.py  test_strategies.py  test_task_classifier.py  test_telemetry_reporter.py  test_tool_result_classifier.py  (+1 more)
sdk/python/traject/: __init__.py  backend_client.py  exceptions.py  models.py
sdk/python/traject/advisor/: prompt_cache_advisor.py
sdk/python/traject/axon/: __init__.py  exceptions.py  models.py
sdk/python/traject/batch/: __init__.py  batch_router.py  job_tracker.py
sdk/python/traject/cache/: __init__.py  semantic_cache.py
sdk/python/traject/classifier/: __init__.py
sdk/python/traject/cli/: main.py
sdk/python/traject/compression/: __init__.py  ccr.py  engine.py  json_columnarizer.py  prose_filter.py  relevance_scorer.py  segment_parser.py  strategies.py  tool_result_classifier.py
sdk/python/traject/core/: __init__.py  cost_calculator.py  instrumentor.py  pricing.py  provider_adapter.py  telemetry_reporter.py
sdk/python/traject/mcp/: __init__.py  server.py
sdk/python/traject/plugins/: __init__.py  (+3 more)
(+200 files in other folders)
