[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axon-sdk"
version = "0.1.0"
description = "AI inference observability and trajectory optimization middleware"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "ai", "inference", "optimization", "opentelemetry", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "pydantic>=2.6",
    "structlog>=24.1",
    "sentence-transformers>=3.0",
    "tiktoken>=0.7",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.28"]
langchain = ["langchain-core>=0.2"]
autogen = ["pyautogen>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "openai>=1.30",
    "anthropic>=0.28",
]

[project.scripts]
axon = "axon.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["axon"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
# Adapter interfaces must accept Any — they're framework-agnostic by design
"axon/compression/adapters/*.py" = ["ANN401"]
# Test helpers use Any for mock responses and fixtures; E501 allowed in parametrize
"tests/**/*.py" = ["ANN401", "E501", "RUF002"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = "autogen"
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=axon --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["axon"]
omit = ["axon/cli/*"]
