[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traject-sdk"
version = "0.1.0"
description = "AI inference observability and trajectory optimization middleware"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "ai", "inference", "optimization", "opentelemetry", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "pydantic>=2.6",
    "structlog>=24.1",
    "sentence-transformers>=3.0",
    "tiktoken>=0.7",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.28"]
langchain = ["langchain-core>=0.2"]
autogen = ["pyautogen>=0.2"]
bedrock = ["boto3>=1.34"]
vertex = ["google-cloud-aiplatform>=1.50"]
ml = ["scikit-learn>=1.3"]
mcp = ["mcp>=1.0"]
proxy = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "openai>=1.30",
    "anthropic>=0.28",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
]

[project.scripts]
traject = "traject.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["traject"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
# Adapter interfaces must accept Any — they're framework-agnostic by design
"traject/compression/adapters/*.py" = ["ANN401"]
# Compression engine — Phase 1 frozen code; long lines and SIM simplifications deferred
"traject/compression/engine.py" = ["E501", "SIM110", "SIM114", "N806"]
# Relevance scorer — Phase 1 frozen code; long lines and RUF003 en-dash in comments
"traject/compression/relevance_scorer.py" = ["E501", "RUF003"]
# OTel exporter — docstring contains a long example format line
"traject/telemetry/otel_exporter.py" = ["E501"]
# RuleRouter.apply is framework-agnostic; client and response types require Any
"traject/router/rule_router.py" = ["ANN401"]
# CascadeTracer.get_cascade_cost accepts Any backend_client — no fixed interface
"traject/tracer/cascade_tracer.py" = ["ANN401"]
# Provider adapters forward **kwargs to cloud SDKs with no fixed type — Any is required
"traject/providers/*.py" = ["ANN401"]
# BatchRouter wraps optional provider clients (openai.AsyncOpenAI, anthropic.AsyncAnthropic)
# and poll_and_collect accepts a provider-specific client — Any is required
"traject/batch/batch_router.py" = ["ANN401"]
# Plugin ABCs forward **kwargs to implementations — no fixed provider type
"traject/plugins/__init__.py" = ["ANN401"]
"traject/plugins/base.py" = ["ANN401"]
# MCP server uses heterogeneous return dicts — ANN401 unavoidable
"traject/mcp/*.py" = ["ANN401"]
# Proxy app uses heterogeneous return dicts and Any kwargs — ANN401 unavoidable
"traject/proxy/*.py" = ["ANN401"]
# CLI uses Any for advisor report (frozen Phase 1 type), F541 in pre-existing string literals
"traject/cli/*.py" = ["ANN401", "F541"]
# instrumentor.py uses fire-and-forget asyncio.create_task for backend send
"traject/core/instrumentor.py" = ["RUF006", "ANN401", "E501", "RUF100"]
# provider_adapter.py has framework-agnostic Any annotations
"traject/core/provider_adapter.py" = ["ANN401", "RUF100"]
# cache module has a long module docstring
"traject/cache/semantic_cache.py" = ["E501", "RUF100"]
# ML router uses noqa directives for optional sklearn import
"traject/router/ml_router.py" = ["RUF100"]
# Test helpers use Any for mock responses and fixtures; E501 allowed in parametrize
# N817 allows CamelCase aliases in test fixtures (e.g. BedrockAdapter as BA)
"tests/**/*.py" = ["ANN401", "E501", "RUF002", "N817", "RUF003", "RUF005", "RUF043", "E402"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "autogen"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vertexai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vertexai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.exporter.otlp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# FastAPI route decorators are untyped — disable decorator errors for proxy module
module = "traject.proxy.app"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# FastMCP @mcp.tool() decorators are untyped — disable decorator errors for MCP server
module = "traject.mcp.server"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# SQLAlchemy DeclarativeBase is Any when sqlalchemy is not installed —
# ignore misc errors in job_tracker which uses ORM base class
module = "traject.batch.job_tracker"
ignore_errors = true


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=traject --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["traject"]
omit = ["traject/cli/*"]
